fix: use highlight for hovered links in contrast mode

--- a/packages/components/src/layout/Layout.module.css
+++ b/packages/components/src/layout/Layout.module.css
@@ -308,14 +308,14 @@
 
   @media (forced-colors: active) {
     background-color: inherit;
-    border-color: selecteditem;
-    color: selecteditem;
+    border-color: highlight;
+    color: highlight;
     transition: none;
   }
 
   &[data-hovered] {
     @media (forced-colors: active) {
-      color: selecteditem;
+      color: highlight;
     }
   }
 }
