--- a/packages/components/src/link-button/LinkButton.module.css
+++ b/packages/components/src/link-button/LinkButton.module.css
@@ -23,6 +23,10 @@
     text-decoration: none;
     background-color: var(--midas-button-background-primary-hover);
     color: var(--midas-text-on-color);
+
+    @media (forced-colors: active) {
+      color: highlight;
+    }
   }
 
   &[data-pressed],
@@ -66,6 +70,14 @@
   &:hover:not(:disabled, [data-disabled]) {
     color: var(--midas-text-tertiary);
     background-color: var(--midas-button-background-secondary-hover);
+
+    @media (forced-colors: active) {
+      color: highlight;
+
+      .icon {
+        color: highlight;
+      }
+    }
   }
 
   &[data-disabled],
@@ -92,6 +104,10 @@
   &:hover:not(:disabled, [data-disabled]) {
     color: var(--midas-text-tertiary);
     background-color: var(--midas-button-background-tertiary-hover);
+
+    @media (forced-colors: active) {
+      color: highlight;
+    }
   }
 
   &[data-pressed],
